Move FakePointerExpression out of ACSL AST & refactor pointer backtranslation
- Add a common supertype BacktranslatedACSLValue for BacktranslatedExpression
  and a new FakePointer record (which replaces FakePointerExpression).
  BacktranslatedACSLValue replaces BacktranslatedExpression in the public
  interface of ACSL backtranslation.
- Make BacktranslatedExpression a record.
- CACSL2BoogieBacktranslator: refactor extraction and backtranslation of
  pointer structs. Handle pointer names (now represented by a record
  PointerVariable) and pointer values separately.