@@ -28,6 +28,7 @@
  */
 package de.uni_freiburg.informatik.ultimate.plugins.generator.cacsl2boogietranslator;
 
+import java.math.BigInteger;
 import java.util.ArrayDeque;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -98,8 +99,8 @@ import de.uni_freiburg.informatik.ultimate.core.model.translation.AtomicTraceEle
 import de.uni_freiburg.informatik.ultimate.core.model.translation.IBacktranslatedCFG;
 import de.uni_freiburg.informatik.ultimate.core.model.translation.IProgramExecution;
 import de.uni_freiburg.informatik.ultimate.core.model.translation.IProgramExecution.ProgramState;
-import de.uni_freiburg.informatik.ultimate.model.acsl.ast.FakePointerExpression;
-import de.uni_freiburg.informatik.ultimate.plugins.generator.cacsl2boogietranslator.Boogie2ACSL.BacktranslatedExpression;
+import de.uni_freiburg.informatik.ultimate.plugins.generator.cacsl2boogietranslator.BacktranslatedACSLValue.BacktranslatedExpression;
+import de.uni_freiburg.informatik.ultimate.plugins.generator.cacsl2boogietranslator.BacktranslatedACSLValue.FakePointer;
 import de.uni_freiburg.informatik.ultimate.util.datastructures.DataStructureUtils;
 import de.uni_freiburg.informatik.ultimate.util.datastructures.relation.Pair;
 
@@ -109,7 +110,7 @@ import de.uni_freiburg.informatik.ultimate.util.datastructures.relation.Pair;
  * @author dietsch@informatik.uni-freiburg.de
  */
 public class CACSL2BoogieBacktranslator extends
-		DefaultTranslator<BoogieASTNode, CACSLLocation, Expression, BacktranslatedExpression, String, String, ILocation> {
+		DefaultTranslator<BoogieASTNode, CACSLLocation, Expression, BacktranslatedACSLValue, String, String, ILocation> {
 
 	/**
 	 * Throw error in cases where we know that the backtranslation is not exact.
@@ -129,7 +130,7 @@ public class CACSL2BoogieBacktranslator extends
 	public CACSL2BoogieBacktranslator(final IUltimateServiceProvider services, final TypeSizes typeSizes,
 			final CACSL2BoogieBacktranslatorMapping mapping, final LocationFactory locationFactory,
 			final FlatSymbolTable symbolTable) {
-		super(BoogieASTNode.class, CACSLLocation.class, Expression.class, BacktranslatedExpression.class);
+		super(BoogieASTNode.class, CACSLLocation.class, Expression.class, BacktranslatedACSLValue.class);
 		mServices = services;
 		mLogger = mServices.getLoggingService().getLogger(Activator.PLUGIN_ID);
 		mMapping = mapping;
@@ -151,7 +152,7 @@ public class CACSL2BoogieBacktranslator extends
 				.collect(Collectors.toList());
 		final IProgramExecution<BoogieASTNode, Expression> tracePE =
 				new BoogieProgramExecution(Collections.emptyMap(), ateTrace, false);
-		final IProgramExecution<CACSLLocation, BacktranslatedExpression> translatedPE =
+		final IProgramExecution<CACSLLocation, BacktranslatedACSLValue> translatedPE =
 				translateProgramExecution(tracePE);
 		final List<CACSLLocation> translatedTrace = new ArrayList<>();
 
@@ -164,7 +165,7 @@ public class CACSL2BoogieBacktranslator extends
 	}
 
 	@Override
-	public IProgramExecution<CACSLLocation, BacktranslatedExpression>
+	public IProgramExecution<CACSLLocation, BacktranslatedACSLValue>
 			translateProgramExecution(final IProgramExecution<BoogieASTNode, Expression> oldPE) {
 		assert checkCallStackSourceProgramExecution(mLogger, oldPE)
 				: "callstack of initial program execution already broken";
@@ -175,7 +176,7 @@ public class CACSL2BoogieBacktranslator extends
 	}
 
 	@Override
-	public Lasso<IProgramExecution<CACSLLocation, BacktranslatedExpression>>
+	public Lasso<IProgramExecution<CACSLLocation, BacktranslatedACSLValue>>
 			translateLassoProgramExecution(final Lasso<IProgramExecution<BoogieASTNode, Expression>> oldPE) {
 		assert checkCallStackSourceLassoProgramExecution(mLogger, oldPE)
 				: "callstack of initial program execution already broken";
@@ -190,11 +191,11 @@ public class CACSL2BoogieBacktranslator extends
 			translateProgramExecutionInternal(final IProgramExecution<BoogieASTNode, Expression> oldPE) {
 
 		// initial state
-		ProgramState<BacktranslatedExpression> initialState = translateProgramState(oldPE.getInitialProgramState());
+		ProgramState<BacktranslatedACSLValue> initialState = translateProgramState(oldPE.getInitialProgramState());
 
 		// translate trace and program state in tandem
 		final List<AtomicTraceElement<CACSLLocation>> translatedATEs = new ArrayList<>();
-		final List<ProgramState<BacktranslatedExpression>> translatedProgramStates = new ArrayList<>();
+		final List<ProgramState<BacktranslatedACSLValue>> translatedProgramStates = new ArrayList<>();
 		for (int i = 0; i < oldPE.getLength(); ++i) {
 
 			final AtomicTraceElement<BoogieASTNode> ate = oldPE.getTraceElement(i);
@@ -295,10 +296,10 @@ public class CACSL2BoogieBacktranslator extends
 		// reason must be the null node itself
 		// remove all ATEs where the step node is null
 		final Iterator<AtomicTraceElement<CACSLLocation>> iter = translatedATEs.iterator();
-		final Iterator<ProgramState<BacktranslatedExpression>> iterPs = translatedProgramStates.iterator();
+		final Iterator<ProgramState<BacktranslatedACSLValue>> iterPs = translatedProgramStates.iterator();
 		while (iter.hasNext()) {
 			final CACSLLocation step = iter.next().getStep();
-			final ProgramState<BacktranslatedExpression> programStateAfter = iterPs.next();
+			final ProgramState<BacktranslatedACSLValue> programStateAfter = iterPs.next();
 			if (!(step instanceof CLocation)) {
 				continue;
 			}
@@ -373,7 +374,7 @@ public class CACSL2BoogieBacktranslator extends
 	private int handleCASTFunctionCallExpression(final IProgramExecution<BoogieASTNode, Expression> programExecution,
 			final int index, final CASTFunctionCallExpression fcall, final CLocation cloc,
 			final List<AtomicTraceElement<CACSLLocation>> translatedAtoTraceElems,
-			final List<ProgramState<BacktranslatedExpression>> translatedProgramStates) {
+			final List<ProgramState<BacktranslatedACSLValue>> translatedProgramStates) {
 		// directly after the function call expression we find
 		// for each argument a CASTFunctionDefinition / AssignmentStatement that
 		// maps the input variable to a new local one (because boogie function
@@ -435,7 +436,7 @@ public class CACSL2BoogieBacktranslator extends
 	private int handleNonCallDuringCASTFunctionCallExpression(
 			final IProgramExecution<BoogieASTNode, Expression> programExecution, final int index, final CLocation cloc,
 			final List<AtomicTraceElement<CACSLLocation>> translatedAtoTraceElems,
-			final List<ProgramState<BacktranslatedExpression>> translatedProgramStates,
+			final List<ProgramState<BacktranslatedACSLValue>> translatedProgramStates,
 			final AtomicTraceElement<BoogieASTNode> currentATE, final BoogieASTNode currentTraceElement) {
 		// this is some special case, e.g. an assert false or a havoc or a fork or a join
 		final EnumSet<StepInfo> stepInfo;
@@ -564,13 +565,13 @@ public class CACSL2BoogieBacktranslator extends
 	}
 
 	@Override
-	public ProgramState<BacktranslatedExpression> translateProgramState(final ProgramState<Expression> programState) {
+	public ProgramState<BacktranslatedACSLValue> translateProgramState(final ProgramState<Expression> programState) {
 		if (programState == null) {
 			// cannot translate nothin'
 			return null;
 		}
-		final Map<BacktranslatedExpression, Collection<BacktranslatedExpression>> translatedStateMap = new HashMap<>();
-		final ProgramState<ExpressionOrPointer> compressedProgramState = compressProgramState(programState);
+		final Map<Expression, Collection<ExpressionOrPointer>> compressedProgramState =
+				compressProgramState(programState);
 
 		// Suppress backtranslation warnings for program states
 		// We just skip variables like pointers or aux-vars in the programs states
@@ -578,28 +579,28 @@ public class CACSL2BoogieBacktranslator extends
 		final boolean generateOld = mGenerateBacktranslationWarnings;
 		final boolean warnedOld = mBacktranslationWarned;
 		mGenerateBacktranslationWarnings = false;
-		for (final ExpressionOrPointer varName : compressedProgramState.getVariables()) {
-			translateProgramStateEntry(varName, compressedProgramState, translatedStateMap);
+		final Map<BacktranslatedACSLValue, Collection<BacktranslatedACSLValue>> translatedStateMap = new HashMap<>();
+		for (final var entry : compressedProgramState.entrySet()) {
+			translateProgramStateEntry(entry, translatedStateMap);
 		}
 		mGenerateBacktranslationWarnings = generateOld;
 		mBacktranslationWarned = warnedOld;
-		return new ProgramState<>(translatedStateMap, BacktranslatedExpression.class);
+		return new ProgramState<>(translatedStateMap, BacktranslatedACSLValue.class);
 
 	}
 
-	private void translateProgramStateEntry(final ExpressionOrPointer varName,
-			final ProgramState<ExpressionOrPointer> compressedProgramState,
-			final Map<BacktranslatedExpression, Collection<BacktranslatedExpression>> translatedStateMap) {
+	private void translateProgramStateEntry(final Map.Entry<Expression, Collection<ExpressionOrPointer>> entry,
+			final Map<BacktranslatedACSLValue, Collection<BacktranslatedACSLValue>> translatedStateMap) {
 		// first, translate name
-		final BacktranslatedExpression newVarName = translateExpressionForProgramState(varName);
+		final BacktranslatedExpression newVarName = translateExpression(entry.getKey());
 		if (newVarName == null) {
 			return;
 		}
+
 		// then, translate values
-		final Collection<ExpressionOrPointer> varValues = compressedProgramState.getValues(varName);
-		final Collection<BacktranslatedExpression> newVarValues = new ArrayList<>();
-		for (final ExpressionOrPointer varValue : varValues) {
-			final BacktranslatedExpression newVarValue = translateExpressionForProgramState(varValue);
+		final Collection<BacktranslatedACSLValue> newVarValues = new ArrayList<>();
+		for (final ExpressionOrPointer varValue : entry.getValue()) {
+			final BacktranslatedACSLValue newVarValue = translateExpressionForProgramState(varValue);
 			if (newVarValue != null) {
 				newVarValues.add(newVarValue);
 			}
@@ -607,7 +608,7 @@ public class CACSL2BoogieBacktranslator extends
 
 		// finally, merge with possibly existing values for this name
 		if (!newVarValues.isEmpty()) {
-			final Collection<BacktranslatedExpression> oldVarValues = translatedStateMap.put(newVarName, newVarValues);
+			final Collection<BacktranslatedACSLValue> oldVarValues = translatedStateMap.put(newVarName, newVarValues);
 			if (oldVarValues != null) {
 				newVarValues.addAll(oldVarValues);
 			}
@@ -615,39 +616,38 @@ public class CACSL2BoogieBacktranslator extends
 	}
 
 	/**
-	 * Replace base and offset with one {@link Pointer}
+	 * Replace separate values for base and offset of a pointer with one {@link PointerValue}
 	 *
 	 * @param programState
 	 *            May not be null
 	 */
-	private ProgramState<ExpressionOrPointer> compressProgramState(final ProgramState<Expression> programState) {
+	private Map<Expression, Collection<ExpressionOrPointer>>
+			compressProgramState(final ProgramState<Expression> programState) {
 		final List<Pair<Expression, Collection<Expression>>> oldEntries = new ArrayList<>();
-		final List<Pair<ExpressionOrPointer, Collection<ExpressionOrPointer>>> newEntries = new ArrayList<>();
+		final List<Pair<Expression, Collection<ExpressionOrPointer>>> newEntries = new ArrayList<>();
 
 		for (final Expression var : programState.getVariables()) {
 			final Pair<Expression, Collection<Expression>> entry = new Pair<>(var, programState.getValues(var));
 			oldEntries.add(entry);
 		}
 
-		int x = -1;
-		int y = 0;
-		while (x < y) {
-			// collect all pointers
-			x = newEntries.size();
-			extractTemporaryPointerExpression(oldEntries, newEntries);
-			y = newEntries.size();
+		// collect all pointers
+		var extractedPointer = extractTemporaryPointerExpression(oldEntries);
+		while (extractedPointer != null) {
+			newEntries.add(extractedPointer);
+			extractedPointer = extractTemporaryPointerExpression(oldEntries);
 		}
 
+		// wrap non-pointers
 		for (final var oldEntry : oldEntries) {
-			final var wrappedValues = oldEntry.getValue().stream().<ExpressionOrPointer> map(WrappedExpression::new)
-					.collect(Collectors.toList());
-			final Pair<ExpressionOrPointer, Collection<ExpressionOrPointer>> wrappedEntry =
-					new Pair<>(new WrappedExpression(oldEntry.getFirst()), wrappedValues);
-			newEntries.add(wrappedEntry);
+			final var wrappedValues =
+					oldEntry.getValue().stream().<ExpressionOrPointer> map(WrappedExpression::new).toList();
+			newEntries.add(new Pair<>(oldEntry.getFirst(), wrappedValues));
 		}
 
-		final Map<ExpressionOrPointer, Collection<ExpressionOrPointer>> map = new HashMap<>();
-		for (final Pair<ExpressionOrPointer, Collection<ExpressionOrPointer>> entry : newEntries) {
+		// merge duplicates and collect everything in a Map
+		final Map<Expression, Collection<ExpressionOrPointer>> map = new HashMap<>();
+		for (final Pair<Expression, Collection<ExpressionOrPointer>> entry : newEntries) {
 			final Collection<ExpressionOrPointer> newValues = entry.getSecond();
 			final Collection<ExpressionOrPointer> oldValues = map.put(entry.getFirst(), entry.getSecond());
 			if (oldValues != null) {
@@ -655,85 +655,76 @@ public class CACSL2BoogieBacktranslator extends
 			}
 		}
 
-		return new ProgramState<>(map, ExpressionOrPointer.class);
+		return map;
 	}
 
-	private void extractTemporaryPointerExpression(final List<Pair<Expression, Collection<Expression>>> oldEntries,
-			final List<Pair<ExpressionOrPointer, Collection<ExpressionOrPointer>>> newEntries) {
+	private Pair<Expression, Collection<ExpressionOrPointer>>
+			extractTemporaryPointerExpression(final List<Pair<Expression, Collection<Expression>>> oldEntries) {
+		// Find pointer base expressions in oldEntries, merge them with matching pointer offset expressions,
+		// and move the combined expression to newEntries.
+		// (We do a reversed by-index iteration over oldEntries so we can safely call remove() for the index.)
 		for (int i = oldEntries.size() - 1; i >= 0; i--) {
 			final Pair<Expression, Collection<Expression>> entry = oldEntries.get(i);
 
-			boolean isPointerBase = false;
-			boolean isOld = false;
-			if (isPointerBase(entry.getFirst())) {
-				isPointerBase = true;
-				isOld = false;
-			} else if (isOldPointerBase(entry.getFirst())) {
-				isPointerBase = true;
-				isOld = true;
+			// Check if the current entry is the base of a pointer struct
+			final var pointerVariable = PointerVariable.fromBaseExpression(entry.getFirst());
+			if (pointerVariable == null) {
+				continue;
 			}
-			if (isPointerBase) {
-				final String name = getPointerName(entry.getFirst(), isOld);
-				for (int j = oldEntries.size() - 1; j >= 0; j--) {
-					final Pair<Expression, Collection<Expression>> otherentry = oldEntries.get(j);
-					if (!isPointerOffsetFor(otherentry.getFirst(), name, isOld)) {
-						continue;
-					}
-					final var tmpPointerVar = assemblePointer(entry.getFirst(), otherentry.getFirst(), isOld);
 
-					if (entry.getSecond().size() != 1 || otherentry.getSecond().size() != 1) {
-						reportUnfinishedBacktranslation("Pointers with multiple values");
-					}
-					final var valueBase = DataStructureUtils.getOneAndOnly(entry.getSecond(), "pointer base");
-					final var valueOffset = DataStructureUtils.getOneAndOnly(otherentry.getSecond(), "pointer offset");
-					final var tmpPointerValue = new Pointer(entry.getFirst().getLocation(), valueBase, valueOffset);
-
-					final Pair<ExpressionOrPointer, Collection<ExpressionOrPointer>> newEntry =
-							new Pair<>(tmpPointerVar, new ArrayList<>());
-					newEntry.getSecond().add(tmpPointerValue);
-					newEntries.add(newEntry);
-					oldEntries.remove(entry);
-					oldEntries.remove(otherentry);
-					return;
+			// Find a matching offset expression for the same pointer struct.
+			// (We do a reversed by-index iteration over oldEntries so we can safely call remove() for the offset.)
+			for (int j = oldEntries.size() - 1; j >= 0; j--) {
+				final Pair<Expression, Collection<Expression>> otherentry = oldEntries.get(j);
+				if (!pointerVariable.isMatchingPointerOffset(otherentry.getFirst())) {
+					continue;
 				}
+
+				if (entry.getSecond().size() != 1 || otherentry.getSecond().size() != 1) {
+					reportUnfinishedBacktranslation("Pointers with multiple values");
+				}
+				final var valueBase = DataStructureUtils.getOneAndOnly(entry.getSecond(), "pointer base");
+				final var valueOffset = DataStructureUtils.getOneAndOnly(otherentry.getSecond(), "pointer offset");
+				final var pointerValue = new PointerValue(valueBase, valueOffset);
+
+				// Remove the now obsolete entries.
+				oldEntries.remove(entry);
+				oldEntries.remove(otherentry);
+
+				// must be a mutable list, so do not use List.of(pointerValue) here
+				final var values = new ArrayList<ExpressionOrPointer>();
+				values.add(pointerValue);
+				return new Pair<>(pointerVariable.toExpression(), values);
 			}
 		}
+		return null;
 	}
 
-	private static boolean isPointerBase(final Expression expr) {
-		return expr instanceof final IdentifierExpression id && id.getIdentifier().endsWith(SFO.POINTER_BASE);
+	private BacktranslatedACSLValue translateExpressionForProgramState(final ExpressionOrPointer expression) {
+		return switch (expression) {
+		case final PointerValue pointer -> translatePointer(pointer);
+		case WrappedExpression(final var expr) -> translateExpression(expr);
+		};
 	}
 
-	private static boolean isOldPointerBase(final Expression expr) {
-		return expr instanceof final UnaryExpression unary && unary.getOperator() == Operator.OLD
-				&& isPointerBase(unary.getExpr());
-	}
-
-	private static boolean isPointerOffsetFor(final Expression expr, final String name, final boolean isOld) {
-		if (isOld && expr instanceof final UnaryExpression uexp) {
-			return uexp.getOperator() == Operator.OLD && isPointerOffsetFor(uexp.getExpr(), name, false);
+	private FakePointer translatePointer(final PointerValue pointer) {
+		final BacktranslatedExpression base = translateExpression(pointer.base());
+		if (!base.range().isSingleton()) {
+			reportUnfinishedBacktranslation("Pointer with non-unique base value");
+			return null;
 		}
-		if (!isOld && expr instanceof final IdentifierExpression idExpr) {
-			final var identifier = idExpr.getIdentifier();
-			return identifier.startsWith(name) && identifier.endsWith(SFO.POINTER_OFFSET);
-		}
-		return false;
-	}
+		final BigInteger baseValue = base.range().getMinValue();
 
-	private static String getPointerName(final Expression base, final boolean isOld) {
-		if (isOld) {
-			return getPointerName(((UnaryExpression) base).getExpr(), false);
+		final BacktranslatedExpression offset = translateExpression(pointer.offset());
+		if (!offset.range().isSingleton()) {
+			reportUnfinishedBacktranslation("Pointer with non-unique base value");
+			return null;
 		}
-		final String baseName = ((IdentifierExpression) base).getIdentifier();
-		return baseName.substring(0, baseName.length() - SFO.POINTER_BASE.length());
-	}
+		final BigInteger offsetValue = offset.range().getMinValue();
 
-	private Pointer assemblePointer(final Expression base, final Expression offset, final boolean isOld) {
-		if (isOld) {
-			return assemblePointer(((UnaryExpression) base).getExpr(), ((UnaryExpression) offset).getExpr(), false)
-					.asOldExpression();
-		}
-		return new Pointer(base.getLoc(), base, offset);
+		// Create a value like {base:offset}
+		// This is not a real ACSL expression, so we wrap it into FakePointer.
+		return new FakePointer(baseValue, offsetValue);
 	}
 
 	@Override
@@ -781,7 +772,7 @@ public class CACSL2BoogieBacktranslator extends
 	}
 
 	@Override
-	public ProcedureContract<BacktranslatedExpression, BacktranslatedExpression> translateProcedureContract(
+	public ProcedureContract<BacktranslatedACSLValue, BacktranslatedACSLValue> translateProcedureContract(
 			final ProcedureContract<Expression, ? extends Expression> oldContract, final ILocation context) {
 		if (context instanceof final CACSLLocation loc && loc.ignoreDuringBacktranslation()) {
 			return null;
@@ -913,33 +904,6 @@ public class CACSL2BoogieBacktranslator extends
 			mLogger.info("Reduced CFG by removing " + i + " nodes and edges");
 			reduceCFG(root);
 		}
-	}
-
-	private BacktranslatedExpression translateExpressionForProgramState(final ExpressionOrPointer expression) {
-		switch (expression) {
-		case final Pointer pointer:
-			final var translated = translatePointer(pointer);
-			return pointer.isOld() ? translated.asOldExpression() : translated;
-		case WrappedExpression(final var expr):
-			return translateExpression(expr);
-		}
-	}
-
-	private BacktranslatedExpression translatePointer(final Pointer pointer) {
-		if (pointer.base() instanceof final IdentifierExpression id) {
-			final String name = id.getIdentifier();
-			// If the base is of the form a!base, just translate a accordingly
-			if (name.endsWith(SFO.POINTER_BASE)) {
-				final String originalName = name.substring(0, name.length() - SFO.POINTER_BASE.length() - 1);
-				return translateExpression(new IdentifierExpression(id.getLoc(), id.getType(), originalName,
-						id.getDeclarationInformation()));
-			}
-		}
-		// Otherwise create a value like {base:offset}
-		// This is not a real ACSL-expression, so we wrap it into FakePointerExpression
-		return new BacktranslatedExpression(
-				new FakePointerExpression(translateExpression(pointer.base()).getExpression(),
-						translateExpression(pointer.offset()).getExpression()));
 	}
 
 	@Override
@@ -1116,7 +1080,61 @@ public class CACSL2BoogieBacktranslator extends
 		}
 	}
 
-	private sealed interface ExpressionOrPointer permits WrappedExpression, Pointer {
+	/**
+	 * Represents a pointer struct variable in Boogie.
+	 *
+	 * This class is only used to represent variables (keys in the program state). For values of pointer structs, use
+	 * {@link PointerValue} instead.
+	 */
+	private record PointerVariable(ILocation loc, IdentifierExpression rawPointer, boolean isOld) {
+		/**
+		 * Checks if the given expression is the base of a pointer struct and returns the corresponding
+		 * {@link PointerVariable} if so. Otherwise, returns {@code null}.
+		 */
+		private static PointerVariable fromBaseExpression(final Expression expr) {
+			if (expr instanceof final IdentifierExpression id && id.getIdentifier().endsWith(SFO.POINTER_BASE)) {
+				final String baseName = id.getIdentifier();
+				final String pointerName = baseName.substring(0, baseName.length() - SFO.POINTER_BASE.length() - 1);
+				final var pointer = new IdentifierExpression(id.getLoc(), id.getType(), pointerName,
+						id.getDeclarationInformation());
+				return new PointerVariable(pointer.getLoc(), pointer, false);
+			}
+			if (expr instanceof final UnaryExpression unary && unary.getOperator() == Operator.OLD) {
+				final var underlying = fromBaseExpression(unary.getExpr());
+				if (underlying != null) {
+					return new PointerVariable(unary.getLoc(), underlying.rawPointer(), true);
+				}
+			}
+			return null;
+		}
+
+		/**
+		 * Checks if the given expression is a variable representing an offset for this pointer variable.
+		 */
+		private boolean isMatchingPointerOffset(final Expression expr) {
+			if (isOld() && expr instanceof final UnaryExpression uExpr) {
+				return uExpr.getOperator() == Operator.OLD && asNonOld().isMatchingPointerOffset(uExpr.getExpr());
+			}
+			if (!isOld() && expr instanceof final IdentifierExpression idExpr) {
+				final var identifier = idExpr.getIdentifier();
+				return identifier.startsWith(rawPointer().getIdentifier()) && identifier.endsWith(SFO.POINTER_OFFSET);
+			}
+			return false;
+		}
+
+		private Expression toExpression() {
+			if (isOld) {
+				return new UnaryExpression(loc, Operator.OLD, rawPointer);
+			}
+			return rawPointer;
+		}
+
+		private PointerVariable asNonOld() {
+			return new PointerVariable(rawPointer.getLoc(), rawPointer, false);
+		}
+	}
+
+	private sealed interface ExpressionOrPointer permits WrappedExpression, PointerValue {
 		// empty
 	}
 
@@ -1124,14 +1142,11 @@ public class CACSL2BoogieBacktranslator extends
 		// empty
 	}
 
-	private record Pointer(ILocation loc, Expression base, Expression offset, boolean isOld)
-			implements ExpressionOrPointer {
-		public Pointer(final ILocation loc, final Expression base, final Expression offset) {
-			this(loc, base, offset, false);
-		}
-
-		public Pointer asOldExpression() {
-			return new Pointer(loc, base, offset, true);
-		}
+	/**
+	 * Represents a pair of values forming a pointer struct in Boogie.
+	 */
+	// TODO Shouldn't this already be reassembled in BoogiePreprocessor backtranslation?
+	private record PointerValue(Expression base, Expression offset) implements ExpressionOrPointer {
+		// empty
 	}
 }
